--- a/journal.Rmd
+++ b/journal.Rmd
@@ -9,7 +9,7 @@ output:
     collapsed: false
     number_sections: true
     toc_depth: 3
-    #code_folding: hide
+    code_folding: show
 ---
 
 ```{r setup, include=FALSE}
