--- a/journal.Rmd
+++ b/journal.Rmd
@@ -7,9 +7,9 @@ output:
     toc: true
     toc_float: true
     collapsed: false
-    number_sections: true
+    number_sections: false
     toc_depth: 3
-    code_folding: show
+    #code_folding: hide
 ---
 
 ```{r setup, include=FALSE}
@@ -24,20 +24,20 @@ The journal is divided into sections: one for each assignment (coding challenge)
 
 Thank you, and I hope this is of any use to you. Enjoy!
 
-~~~
-
 # Assignment No. 1
 
-Last compiled: `r Sys.Date()`
+*Last compiled:* **`r Sys.Date()`**
+
 
 **Goal**
+
 My responsibility is to study the products, look for opportunities to sell new products, and better serve the customer and market the products. All of this is supposed to be justified by data. For this I will delve into R with a real world situation.
 
 The goal is to analyze the sales of bikes sold through bike stores in Germany. The bike models correspond to the models of the manufacturer Canyon. However, please note the sales and store data are made up for demonstration purposes.
 
 For this, I will be importing, wrangling and visualizing the provided data (source of raw data is linked below). You may download the data in case you want to try this code on your own.
 
-Raw data source:
+*Raw data source*:<br />
 ```{r echo=FALSE}
 
 # multiple files
@@ -47,15 +47,17 @@ xfun::embed_files(c('../00_data/01_bike_sales/01_raw_data/bikes.xlsx',
 
 ```
 
+
 **Data**
 
 The bike sales data is divided in multiple data sets for better understanding and organization. The Entity Relationship Diagram (ERD), which is used for describing and defining the data models, is shown below. It illustrates the logical structure of the databases.
 
 <center>
-![Data Schema (ERD)](./images/ERD.svg){#id .class width=60% height=60%}
+![Data Schema (ERD)](./images/ERD.svg){#id .class width=100% height=100%}<br />*Bike Sales Data ERD*<br /><br />
 </center>
 
 The data set has information of ~15k orders from 2015 to 2019 made from multiple bike stores in Germany. Its features allows viewing an order from multiple dimensions: from price to customer location, product attributes and many more.
+
 
 ## Step 1: Load libraries
 
@@ -86,6 +88,7 @@ library(devtools)    # used to install non-CRAN packages
 
 If you haven't installed these packages, please install them by calling `install.packages(`*[name_of_package]*`)` in the R console. After installing, run the above code block again.
 
+
 ## Step 2: Import Files
 
 Read excel files and store the data structure as a tibble. A good convention is to use the file name and suffix it with tbl.
@@ -96,39 +99,27 @@ orderlines_tbl <- read_excel("../00_data/01_bike_sales/01_raw_data/orderlines.xl
 bikeshops_tbl  <- read_excel("../00_data/01_bike_sales/01_raw_data/bikeshops.xlsx")
 ```
 
+
 ## Step 3: Examine Data
 
 It's a good practice to take a look and get afeel of the data by examining it. I find two methods to be the most useful:
-* Method 1: Printing it to the console
-* Method 2: Running `glimpse()` function - helpful for wide data (data with many columns)
+<ul>
+<li>*Method 1*: Printing it to the console</li>
+<li>*Method 2*: Running `glimpse()` function - helpful for wide data (data with many columns)</li>
+</ul>
 
 **Method 1**
+
 ```{r}
 orderlines_tbl
-# A tibble: 15,644 x 7
-##    ...1  order.id order.line order.date          customer.id product.id quantity
-##    <chr>    <dbl>      <dbl> <dttm>                    <dbl>      <dbl>    <dbl>
-##  1 1            1          1 2015-01-07 00:00:00           2       2681        1
-##  2 2            1          2 2015-01-07 00:00:00           2       2411        1
-##  3 3            2          1 2015-01-10 00:00:00          10       2629        1
-##  4 4            2          2 2015-01-10 00:00:00          10       2137        1
-##  5 5            3          1 2015-01-10 00:00:00           6       2367        1
-## # … with 15,639 more rows
 ```
 
 **Method 2**
+
 ```{r}
 glimpse(orderlines_tbl)
-## Rows: 15,644
-## Columns: 7
-## $ ...1        <chr> "1", "2", "3", "4", "5", "6", "7", "8", "…
-## $ order.id    <dbl> 1, 1, 2, 2, 3, 3, 3, 3, 3, 4, 5, 5, 5, 5,…
-## $ order.line  <dbl> 1, 2, 1, 2, 1, 2, 3, 4, 5, 1, 1, 2, 3, 4,…
-## $ order.date  <dttm> 2015-01-07, 2015-01-07, 2015-01-10, 2015…
-## $ customer.id <dbl> 2, 2, 10, 10, 6, 6, 6, 6, 6, 22, 8, 8, 8,…
-## $ product.id  <dbl> 2681, 2411, 2629, 2137, 2367, 1973, 2422,…
-## $ quantity    <dbl> 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1,…
 ```
+
 
 ## Step 4: Manipulate Data by Joining
 
@@ -144,28 +135,15 @@ bike_orderlines_joined_tbl <- orderlines_tbl %>%
 bike_orderlines_joined_tbl %>% glimpse()
 ```
 
+
 ## Step 5: Wrangle Data
 
 The data requires more manipulation and further cleaning in order to visualize the data properly. The objective of this assignment is to create a wrangled object to analyze sales by location (state). To examine how the state is recorded in the data, it'd be wise to get unique elements of the `location` column of `bike_orderlines_joined_tbl`.
 
 ```{r}
 bike_orderlines_joined_tbl$location %>% unique()
-##  [1] "Hamburg, Hamburg"                       "Bremen, Bremen"                        
-##  [3] "Stuttgart, Baden-Württemberg"           "Augsburg, Bavaria"                     
-##  [5] "Dortmund, North Rhine-Westphalia"       "Wuppertal, North Rhine-Westphalia"     
-##  [7] "Essen, North Rhine-Westphalia"          "Braunschweig, Lower Saxony"            
-##  [9] "Karlsruhe, Baden-Württemberg"           "Bielefeld, North Rhine-Westphalia"     
-## [11] "Düsseldorf, North Rhine-Westphalia"     "Duisburg, North Rhine-Westphalia"      
-## [13] "Marienberg, Bavaria"                    "Frankfurt, Hesse"                      
-## [15] "Mannheim, Baden-Württemberg"            "Wiesbaden, Hesse"                      
-## [17] "Munich, Bavaria"                        "Rostock, Mecklenburg-Western Pomerania"
-## [19] "Münster, North Rhine-Westphalia"        "Hannover, Lower Saxony"                
-## [21] "Dresden, Saxony"                        "Freiburg, Baden-Württemberg"           
-## [23] "Berlin, Berlin"                         "Magdeburg, Saxony-Anhalt"              
-## [25] "Lübeck, Schleswig-Holstein"             "Bonn, North Rhine-Westphalia"          
-## [27] "Kiel, Schleswig-Holstein"               "Cologne, North Rhine-Westphalia"       
-## [29] "Chemnitz, Saxony"                       "Leipzig, Saxony"
 ```
+
 
 Afterwards, a set of actions are performed as shown below. Please note all actions are chained with the pipe already. However, each step can be performed separately with use `glimpse()` for code validation.
 
@@ -191,13 +169,16 @@ bike_orderlines_wrangled_tbl <- bike_orderlines_joined_tbl %>%
   set_names(names(.) %>% str_replace_all("\\.", "_"))
 ```
 
+
 ## Step 6: Visualize Data Through Insights
 
 ### Sales by State (Part 1)
 
 In order to analyze the sales by state, we first need to manipulate the data a bit more, so it can be visualized correctly. The results are stored in the `sales_by_loc_tbl` tibble. Both data manipulation and visualization for the first part of the assignment is shown below.
 
+
 **Manipulate**
+
 ```{r}
 # Manipulate the data and store result
 sales_by_loc_tbl <- bike_orderlines_wrangled_tbl %>%
@@ -218,24 +199,11 @@ sales_by_loc_tbl <- bike_orderlines_wrangled_tbl %>%
                                      suffix = " €"))
 
 sales_by_loc_tbl
-# A tibble: 12 x 3
-##   state                            sales sales_text  
-##   <chr>                            <dbl> <chr>       
-## 1 North Rhine-Westphalia        21200613 21.200.613 €
-## 2 Bremen                        10653499 10.653.499 €
-## 3 Bavaria                        6742819 6.742.819 € 
-## 4 Baden-Württemberg              6521090 6.521.090 € 
-## 5 Lower Saxony                   4107115 4.107.115 € 
-## 6 Hamburg                        3874756 3.874.756 € 
-## 7 Schleswig-Holstein             3224749 3.224.749 € 
-## 8 Saxony                         2230245 2.230.245 € 
-## 9 Hesse                          1558901 1.558.901 € 
-##10 Berlin                         1128433 1.128.433 € 
-##11 Mecklenburg-Western Pomerania   618974 618.974 €   
-##12 Saxony-Anhalt                   569614 569.614 €   
 ```
 
+
 **Visualize**
+
 ```{r plot1, fig.width=10, fig.height=7}
 sales_by_loc_tbl %>%
   # Setup canvas with the columns state (x-axis) and sales (y-axis)
@@ -248,7 +216,7 @@ sales_by_loc_tbl %>%
   geom_col(fill = "#2D303E") + # Use geom_col for a bar plot and fill with color
   # Adding labels to the bars along with formatting for better presentation
   geom_text(aes(label = sales_text), position = position_dodge(width = 0.9), 
-          hjust = -0.1, size = 3.5, show.legend = FALSE, angle = 90) +
+          hjust = -0.1, size = 2.5, show.legend = FALSE, angle = 90) +
   
   # Formatting and re-scaling the y-axis
   # Again, we have to adjust it for euro values
@@ -270,7 +238,9 @@ sales_by_loc_tbl %>%
 
 In efforts to analyze the sales by state and year, the data needs to be manipulated differently, so it can be visualized correctly. For that, the results are stored in a different tibble: `sales_by_loc_year_tbl`. Both data manipulation and visualization for the second part of the assignment is shown below.
 
+
 **Manipulate**
+
 ```{r}
 # Manipulate the data and store result
 sales_by_loc_year_tbl <- bike_orderlines_wrangled_tbl %>%
@@ -311,7 +281,9 @@ sales_by_loc_year_tbl
 # … with 50 more rows
 ```
 
+
 **Visualize**
+
 ```{r plot2, fig.width=10, fig.height=7}
 sales_by_loc_year_tbl %>%
   # Setup canvas with the columns year (x-axis), sales (y-axis) and state (fill)
@@ -328,7 +300,7 @@ sales_by_loc_year_tbl %>%
   
   # Adding labels to the bars along with formatting for better presentation
   geom_text(aes(label = sales_text), position = position_dodge(width = 0.9), 
-            hjust = -0.1, size = 3.5, show.legend = FALSE, angle=90) +
+            hjust = -0.1, size = 2.5, show.legend = FALSE, angle=90) +
   
   # Formatting and re-scaling the y-axis
   # Again, we have to adjust it for euro values
@@ -346,6 +318,8 @@ sales_by_loc_year_tbl %>%
        fill = "State")
 ```
 
+
+
 # Assignment No. 2
 
 Write text here...
@@ -360,12 +334,6 @@ Write text here...
 
 
 
-
-
-
-
-
-~~~
 ## Second level header
 
 You can add more headers by adding more hashtags. These won't be put into the table of contents
